add and fix html template body for mail

--- a/SimpleMailSender/html/skima_task.html
+++ b/SimpleMailSender/html/skima_task.html
@@ -107,8 +107,7 @@
                                                     </td>
                                                     <tr style="border: 0; margin: 0; padding: 0;">
                                                         <td style="border: 0; border-collapse: collapse; margin: 0; padding: 0; vertical-align: top; color: #ffffff; font-family: Roboto, Arial, sans-serif; font-size: 16px; line-height: 18px; text-size-adjust: none;">
-                                                         Тут место для контента.  Тут большая вложенность таблиц, чтобы везде по бокам были отступы, контент не прилипал к бокам,
-                                                            и, самое главное, не менял ширину контентной области. При этом длина задания может быть любой. :)
+                                                         ОПИСАНИЕ
                                                         </td>
                                                     </tr>
                                                     <td bgcolor="#221f2a" style="border: 0; border-collapse: collapse; margin: 0; padding: 0; vertical-align: top;">
