--- a/SimpleMailSender/html/skima_finish.html
+++ b/SimpleMailSender/html/skima_finish.html
@@ -87,7 +87,7 @@
                                 <td style="border: 0; border-collapse: collapse; font-family: Arial, sans-serif; margin: 0; padding: 0; vertical-align: top;">
                                     <p style="border: 0; color: #ffffff; font-family: Roboto, Arial, sans-serif; font-size: 20px; line-height: 28px; margin: 0; padding: 0; text-align: center; text-size-adjust: none;">
                                         Поздравляем Вас с завершением марафона <br>
-                                        <span style="border: 0; color: #cd4f01; text-transform: uppercase;" >НАЗВАНИЕ СПРИНТА</span>!
+                                        <span style="border: 0; color: #cd4f01; text-transform: uppercase;" >НАЗВАНИЕ МАРАФОНА</span>!
                                     </p>
                                 </td>
                             </tr>
