Change html templates

--- a/SimpleMailSender/html/skima_registration.html
+++ b/SimpleMailSender/html/skima_registration.html
@@ -119,7 +119,7 @@
                                         <tr style="border: 0; margin: 0; padding: 0;">
                                             <td width="35%" bgcolor="#221f2a" style="border: 0; border-collapse: collapse; margin: 0; padding: 0; vertical-align: top;"></td>
                                             <td width="30%" bgcolor="cd4f01" style="border: 0; margin: 0; padding: 18px; color: #fffff;  font-family: Roboto, Arial, sans-serif; font-size: 18px;">
-                                                <a href="https://www.skima.cf/login" style="text-decoration: none; color: #fff;">Войти</a>
+                                                <a href="https://www.skima.cf/login" style="text-decoration: none; color: #fff;">Перейти</a>
                                             </td>
                                             <td width="35%" bgcolor="#221f2a" style="border: 0; border-collapse: collapse; margin: 0; padding: 0; vertical-align: top;"></td>
                                         </tr>
